# DaydreamEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Asset/SkyBox/: StandardSphare.glsl
Asset/shader/: Lines.glsl  PlaneObj.glsl  README.md  SkyBox.glsl  StandardObj.glsl  defaultObj.glsl  pbrObj.glsl  phongObj.glsl
Asset/shader/twoD/: cat.glsl  circle.glsl  default.glsl
DaydreamEngine/: CMakeLists.txt  DaydreamEngine.cpp  DaydreamEngine.h
DaydreamEngine/application/: app.cpp  app.hpp  app_ui.hpp
DaydreamModule/: CMakeLists.txt
DaydreamModule/d_core/: CMakeLists.txt  pch.hpp
DaydreamModule/d_core/include/: file_sys.hpp  input_sys.hpp  log_sys.hpp
DaydreamModule/d_core/src/: input_sys.cpp  log_sys.cpp
DaydreamModule/d_event/: CMakeLists.txt
DaydreamModule/d_event/signal_slots/: Delegate.h  signal_slots.hpp
DaydreamModule/d_render/: CMakeLists.txt
DaydreamModule/d_render/core/: README.md  SkyBox.hpp  Skybox.cpp  _gl_head.hpp  command.cpp  command.hpp  ds.cpp  ds.hpp  light.cpp  light.hpp  material.cpp  material.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
DaydreamModule/d_render/core/object/: basicObj.cpp  basicObj.hpp  drawObj.cpp  drawObj.hpp  sky.cpp  sky.hpp
DaydreamModule/d_render/resource/: KVBase.cpp  KVBase.hpp
DaydreamModule/d_render/soft_core/: soft_ds.cpp
DaydreamModule/d_render/utils/: built_in_ds.hpp  camera.cpp  camera.hpp  crates.cpp  crates.hpp
DaydreamModule/d_resource/db/: README.md
DaydreamModule/d_scene/: CMakeLists.txt  README.md  sc_base.hpp
DaydreamModule/d_scene/scene/: camera_ctrl.cpp  scene2d.cpp  scene2d.hpp
DaydreamModule/d_ui/: CMakeLists.txt
DaydreamModule/d_ui/layers/: layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
DaydreamModule/d_ui/scene/: camera_ctrl.cpp  camera_ctrl.hpp  scene2d.cpp  scene2d.hpp  scene3d.cpp  scene3d.hpp
DaydreamModule/d_ui/widget/: _base.cpp  _base.hpp  button.cpp  button.hpp  console.cpp  console.hpp  gl_content.cpp  gl_content.hpp  menu.cpp  menu.hpp  texteditor.cpp  texteditor.hpp  utils.cpp  utils.hpp
DaydreamModule/d_ui/window/: timer.cpp  timer.hpp  window.cpp  window.hpp
PyDaydream/: CMakeLists.txt  setup.py
PyDaydream/src/: pydaydream.cpp
doc/: some-commands.md
